feat: change max intensity to exact intensity filter
